take out of preview